--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,23 @@ services:
       - '27017:27017'
     volumes:
       - 'mongodb_data:/data/db'
+
+  qdrant:
+    image: qdrant/qdrant:latest # Use the latest stable Qdrant image
+    container_name: qdrant_service # A human-readable name for your container
+    ports:
+      - "6333:6333" # Qdrant HTTP API and Web UI
+      - "6334:6334" # Qdrant gRPC API
+    volumes:
+      # Mount a named volume for persistent storage
+      # Data will be stored in a Docker volume named 'qdrant_data'
+      - qdrant_data:/qdrant/storage
+    restart: unless-stopped # Ensure the container restarts if it stops unexpectedly
+    # environment: # Optional: Uncomment and configure if you need specific Qdrant environment variables
+    #   QDRANT__SERVICE__GRPC_PORT: 6334
+    #   QDRANT__SERVICE__HTTP_PORT: 6333
+    #   QDRANT__STORAGE__STORAGE_PATH: /qdrant/storage
+
 volumes:
   mongodb_data:
+  qdrant_data: # Define the named volume for Qdrant data persistence
