--- a/arxiv-rig-rust/Cargo.toml
+++ b/arxiv-rig-rust/Cargo.toml
@@ -18,3 +18,4 @@ urlencoding = "2.1.3"
 tera = "1.20.0"
 tower-http = { version = "0.6.6", features = ["cors"] }
 dotenv = "0.15.0"
+html-escape = "0.2.13"
